优化数据库查询数据结果不正确及安捷利项目自动化流程编写，能力库新增出发/确认功能

--- a/config/mysql_config.yaml
+++ b/config/mysql_config.yaml
@@ -8,3 +8,10 @@ siemens_mysql:
   database: test_siemens_rpm
 
 
+ajl_mysql:
+  host: '127.0.0.1'
+  user: cluster
+  password: 'OK3iO9skpEcybGhx'
+  port: 3333
+  charset: utf8
+  database: cluster_system
