1.完成标准一对一手动装卸料架 2.编写标准一对一停等流程

--- a/config/mysql_config.yaml
+++ b/config/mysql_config.yaml
@@ -8,7 +8,7 @@ siemens_mysql:
   database: test_siemens_rpm
 
 
-ajl_mysql:
+standard_mysql:
   host: '127.0.0.1'
   user: cluster
   password: 'OK3iO9skpEcybGhx'
